# linphone-sdk

./: .docker-images.yml  .gitignore  .gitlab-ci-tunnel.yml  .gitlab-ci.yml  .gitmodules  .set_parallel_level.yml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Makefile  README  README.bb10  README.bb10.md  README.desktop.md  README.flexisip.md  README.ios.md  README.md  README.python  README.python.md  build_python.bat  dummy.c  flake.nix  meson.build  nuget.bat  prepare.py  sanitizer_ignore.txt
bctoolbox/: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile.am  NEWS  README  README.md  bctoolbox-tester.pc.in  bctoolbox.pc.in  config.h.cmake  configure.ac
bctoolbox/cmake/: BCGitVersion.cmake  BCToolboxCMakeUtils.cmake  BCToolboxConfig.cmake.in  BcGitVersion.cmake  BcToolboxCMakeUtils.cmake  BcToolboxConfig.cmake.in  ConfigureSpecfile.cmake  FindBCUnit.cmake  FindBcUnit.cmake  FindCUnit.cmake  FindDecaf.cmake  FindMbedTLS.cmake  FindPolarSSL.cmake  MakeArchive.cmake
bctoolbox/include/: CMakeLists.txt
bctoolbox/src/: CMakeLists.txt  Makefile.am  bc_vfs.c  crypto.c  crypto_mbedtls.c  crypto_polarssl.c  param_string.c  parser.c  sqlite3_vfs.c  sqlite3_vfs.cc  tester.c  utils.h  vconnect.c  vfs.c
bctoolbox/tester/: CMakeLists.txt  bctoolbox_tester.c  bctoolbox_tester.h  containers.cc  crypto.c  crypto.cc  encrypted_vfs.cc  ios_utils.cc  logger.cc  param_string.c  parser.c  port.c  sqlite3_vfs.c  vfs.c
bcunit/: .gitignore  AUTHORS  BCUnit.dsw  BCUnit.spec.in  BCUnitConfig.cmake.in  BcUnitConfig.cmake.in  CMakeLists.txt  COPYING  ChangeLog  Doxyfile  FindCUnit.cmake  Jamfile  Jamrules.in  Makefile.am  NEWS  PACKAGE  README  README.md  TODO  autogen.sh  bcunit.pc.in  bootstrap  config.h.cmake  configure  configure.in
bcunit/BCUnit/: BCUnit.dsp  CMakeLists.txt  Jamfile
bcunit/CUnit/: .alias  .bash_history  .bash_logout  .bash_profile  .bashrc  .cshrc  .cvspass  .viminfo  AUTHORS  COPYING  CUnit.dsw  CUnit.spec  CUnit.spec.in  CUnit_dox.css  ChangeLog  Doxyfile  Jamfile  Jamrules  Jamrules-win  Jamrules.in  Makefile  Makefile.am  Makefile.in  README  TODO  VERSION  bootstrap  config.cache  config.h  config.h.in  config.status  configure  configure.in  cunit.pc.in  libcunit_dll.def  mkinstalldirs
bcunit/Examples/: CMakeLists.txt  ExampleTests.c  ExampleTests.h  Jamfile  Makefile.am
belcard/: .gitattributes  .gitignore  BelCardConfig.cmake.in  CHANGELOG.md  CMakeLists.txt  Makefile.am  NEWS  README.md  config.h.cmake  configure.ac
belle-sip/: .cproject  .gitignore  .gitmodules  .project  BelleSIPConfig.cmake  CHANGELOG.md  CMakeLists.txt  FindBelleSIP.cmake  FindBelleSIP.cmake.in  Makefile.am  NEWS  README  README.centos  README.md  autogen.sh  belle-sip.pc.in  belle-sip.spec.in  config.h.cmake  configure.ac  patch1.diff  patch2.diff  patch3.diff
belr/: .gitignore  BelrConfig.cmake.in  CHANGELOG.md  CMakeLists.txt  Makefile.am  NEWS  README  README.md  autogen.sh  config.h.cmake  configure.ac
builders/: CMakeLists.txt  androidcpplib.cmake  androidcpufeatures.cmake  androidsupport.cmake  antlr3c.cmake  bcg729.cmake  bcg729bcng.cmake  bctoolbox.cmake  bcunit.cmake  belcard.cmake  belle-sip.cmake  bellesip.cmake  belr.cmake  bv16.cmake  bzrtp.cmake  codec2.cmake  cunit.cmake  decaf.cmake  ffmpeg.cmake  ffmpegandroid.cmake  flexisip.cmake  gsm.cmake  hiredis.cmake  jansson.cmake  jose.cmake  libilbcrfc3951.cmake  libodb.cmake  libodbmysql.cmake  libxsd.cmake  lime.cmake  linphone.cmake  matroska2.cmake  mbedtls.cmake  minizip.cmake  ms2.cmake  ms2plugins.cmake  msamr.cmake  msbcg729.cmake  mscodec2.cmake  msilbc.cmake  (+32 more)
bzrtp/: .gitignore  AUTHORS  Android.mk  CHANGELOG.md  CMakeLists.txt  Doxyfile.in  FindBZRTP.cmake  Makefile.am  NEWS  README  README.md  autogen.sh  config.h.cmake  configure.ac  libbzrtp.pc.in
cmake/: Autotools.cmake.in  BCProjects.cmake  BcProjects.cmake  CMakeLists.txt  CheckBuildTools.cmake  CheckBuildToolsAndroid.cmake  CheckBuildToolsBundledAndroid.cmake  CheckBuildToolsCommon.cmake  CheckBuildToolsDesktop.cmake  CheckBuildToolsIOS.cmake  CheckBuildToolsJava.cmake  CheckBuildToolsMacos.cmake  CheckBuildToolsRaspberry.cmake  CheckBuildToolsUWP.cmake  CheckBuildToolsYocto.cmake  EktServer.cmake  EktServerClone.cmake  ExternalDependencies.cmake  FindPython3.cmake  HWSanitizer.cmake  LinphoneBuilderOptions.cmake  LinphoneCMakeBuilder.cmake  LinphoneOptions.cmake  LinphoneSdkCheckBuildToolsAndroid.cmake  LinphoneSdkCheckBuildToolsCommon.cmake  LinphoneSdkCheckBuildToolsDesktop.cmake  LinphoneSdkCheckBuildToolsIOS.cmake  LinphoneSdkCheckBuildToolsRaspberry.cmake  LinphoneSdkCheckBuildToolsUWP.cmake  LinphoneSdkPackager.cmake  LinphoneSdkPlatformAndroid.cmake  LinphoneSdkPlatformCommon.cmake  LinphoneSdkPlatformDesktop.cmake  LinphoneSdkPlatformIOS.cmake  LinphoneSdkPlatformMacos.cmake  LinphoneSdkPlatformRaspberry.cmake  LinphoneSdkPlatformUWP.cmake  LinphoneSdkPlatformYocto.cmake  LinphoneSdkPostquantumcryptoengineClone.cmake  LinphoneSdkTunnelClone.cmake  (+34 more)
ekt-server/: CMakeLists.txt  README.md  config.h.cmake
lime/: .gitignore  AUTHORS  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  Doxyfile.in  NEWS  README.md  config.h.cmake  lime.pc.in  lime.tex
msaaudio/: CMakeLists.txt  androidsound_aaudio.cpp  msaaudio.cpp  msaaudio_player.cpp  msaaudio_recorder.cpp
msamr/: .gitignore  AUTHORS  Android.mk  CMakeLists.txt  Makefile.am  NEWS  README  autogen.sh  config.h.cmake  configure.ac  msamr.iss.in  msamr.spec.in
msandroidcamera2/: CMakeLists.txt  android-camera2-capture.cpp
mscodec2/: AUTHORS  Android.mk  CMakeLists.txt  FindCodec2.cmake  Makefile.am  README  configure.ac  mscodec2.c
msoboe/: .gitmodules  CMakeLists.txt  msoboe.cpp  msoboe_player.cpp  msoboe_recorder.cpp
msopenh264/: .gitignore  AUTHORS  Android.mk  CMakeLists.txt  Makefile.am  NEWS  README  README.md  autogen.sh  config.h.cmake  configure.ac  msopenh264.iss  msopenh264.iss.in
mswasapi/: CMakeLists.txt  NEWS  README  mswasapi.c  mswasapi.cpp  mswasapi.h  mswasapi_reader.cpp  mswasapi_reader.h  mswasapi_writer.cpp  mswasapi_writer.h  system_notifier.cpp  system_notifier.h  utils.h
(+2622 files in other folders)
